feat: implement caching for main class model retrieval in HaxePackageModel